// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sample streams > final screen of the fake build stream 1`] = `
{
  "alternate": false,
  "cursor": {
    "visible": true,
    "x": 0,
    "y": 39,
  },
}
`;

exports[`sample streams > final screen of the fake build stream 2`] = `
" ✓ test/cart.test3051.test.ts (37 tests) 630ms
 ✓ src/lib/cache3052.test.ts (25 tests) 6ms
 ✓ test/cart.test3053.test.ts (25 tests) 218ms
 ✓ src/ui/Button3054.test.tsx (16 tests) 499ms
 ✓ src/cart3055.test.ts (11 tests) 29ms
 ✓ test/cart.test3056.test.ts (38 tests) 150ms
 ✓ src/ui/Button3057.test.tsx (14 tests) 536ms
 ✓ src/api/checkout3058.test.ts (10 tests) 632ms
 ✗ test/cart.test.ts > Value cursor buffer buffer suite.
   AssertionError: expected 5 to be 15
 ✓ packages/core/src/status3060.test.ts (33 tests) 663ms
 ✓ test/cart.test3061.test.ts (18 tests) 354ms
 ✓ src/api/checkout3062.test.ts (28 tests) 684ms
 ✓ packages/core/src/status3063.test.ts (26 tests) 172ms
 ✓ packages/core/src/status3064.test.ts (4 tests) 853ms
 ✗ src/lib/cache.ts > Cart module module config transcript.
   AssertionError: expected 8 to be 13
 ✓ test/cart.test3066.test.ts (23 tests) 665ms
 ✓ src/cart3067.test.ts (5 tests) 817ms
 ✓ test/cart.test3068.test.ts (28 tests) 566ms
 ✓ src/lib/cache3069.test.ts (28 tests) 541ms
 ✓ src/lib/cache3070.test.ts (5 tests) 22ms
 ✓ src/lib/cache3071.test.ts (32 tests) 876ms
 ✓ src/ui/Button3072.test.tsx (9 tests) 595ms
 ✓ src/api/checkout3073.test.ts (2 tests) 203ms
 ✓ src/ui/Button3074.test.tsx (20 tests) 826ms
 ✓ src/lib/cache3075.test.ts (5 tests) 119ms
 ✓ packages/core/src/status3076.test.ts (3 tests) 304ms
 ✓ src/ui/Button3077.test.tsx (13 tests) 783ms
 ✓ src/ui/Button3078.test.tsx (26 tests) 384ms
 ✓ src/ui/Button3079.test.tsx (17 tests) 680ms
 ✓ src/cart3080.test.ts (7 tests) 417ms
 ✓ src/cart3081.test.ts (32 tests) 328ms
 ✓ src/cart3082.test.ts (13 tests) 637ms
 ✓ src/api/checkout3083.test.ts (21 tests) 250ms
 ✓ src/lib/cache3084.test.ts (40 tests) 510ms
 ✓ src/ui/Button3085.test.tsx (39 tests) 443ms
 ✓ packages/core/src/status3086.test.ts (3 tests) 60ms
 ✓ packages/core/src/status3087.test.ts (14 tests) 553ms
"
`;

exports[`sample streams > final screen of the fake claude stream 1`] = `
{
  "alternate": false,
  "cursor": {
    "visible": true,
    "x": 0,
    "y": 39,
  },
}
`;

exports[`sample streams > final screen of the fake claude stream 2`] = `
"  ⎿  Updated with 3 additions and 1 removal
⏺ Commit file commit payment session worktree commit function handler column order returns cart update render cart
  handler returns worktree module payment session frame handler handler file value.
⏺ Layout frame file layout value cart parser file config token handler height suite token terminal request.
⏺ Frame commit file returns retry test retry transcript status retry refactor token session buffer layout user token
  branch retry update worktree buffer parser branch.
⏺ Read(src/cart.ts)
  ⎿  Found 4 matches
⏺ Worktree terminal agent session file parser frame the patch file function height transcript error value diff user
  function the transcript render agent agent the frame update payment height value module session order function
  cache cart.
⏺ Width transcript stream config config branch config test config refactor function refactor cursor branch status
  retry value the worktree hook column value token update commit session order status update column height.
⏺ Edit(src/lib/cache.ts)
  ⎿  Updated with 3 additions and 1 removal
⏺ Retry error layout column width worktree cursor width request refactor test frame payment cache cart cart test
  agent worktree value the payment handler retry returns a returns branch diff terminal update height function.
⏺ Error patch refactor terminal returns cursor line function handler layout diff returns the module diff function
  cursor worktree stream function update order stream cursor branch suite.
⏺ Token layout diff retry handler refactor layout order frame token config height cache refactor module stream the
  user test error branch status refactor worktree a buffer branch session terminal terminal test user value agent
  parser session render error hook.
⏺ Commit status column hook frame width value checkout cart agent the config parser width.
⏺ The suite session checkout refactor diff the config value handler height cache module error value terminal a suite
  transcript request order diff hook a update cart branch parser parser the session cursor cursor handler function.
⏺ Column checkout request parser module line value request function worktree retry cursor status cursor status cache
  render commit column the commit payment cache a test.
⏺ Grep(src/ui/Button.tsx)
  ⎿  Updated with 3 additions and 1 removal
⏺ Grep(src/api/checkout.ts)
  ⎿  Read 120 lines
⏺ Parser session cursor stream token checkout returns status frame value column suite render returns layout module
  layout stream user line session refactor error branch height width the token cart.
⠸ Reading… (8s · ↑ 6.2k tokens · esc to interrupt)

╭────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ >                                                                                                                  │
╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  ⏵⏵ accept edits on (shift+tab to cycle)
"
`;

exports[`sample streams > final screen of the fake codex stream 1`] = `
{
  "alternate": false,
  "cursor": {
    "visible": true,
    "x": 0,
    "y": 39,
  },
}
`;

exports[`sample streams > final screen of the fake codex stream 2`] = `
"Cache render commit status request width width cursor test suite value a width user cache render order the stream
patch config line layout error checkout returns.

Cache line diff width terminal test test commit function request payment status session user commit value width patch
token worktree render refactor agent diff file cursor update buffer agent width hook line cart retry diff worktree
error column error diff.

Patch column parser width branch transcript commit handler parser width hook suite stream diff terminal retry
refactor test commit transcript the cart handler diff cache.

Parser refactor width stream suite cart frame stream update hook session terminal error render patch the commit file.

Error a patch request frame commit module hook value buffer commit commit error config retry function user stream
token suite width render file token cart retry width diff refactor.

Value a retry worktree the column patch commit test file config parser payment handler layout suite test value hook
the.

Payment order refactor checkout layout width checkout cursor diff file terminal width render config transcript layout
session layout order.

• Edited src/cart.ts (+3 -4)
 131      frame handler returns refactor stream.
 132 +      patch cursor parser patch buffer terminal error.
 133    request layout width.
 134        token session diff error payment diff buffer branch.
 135  worktree config module token.
 136      column cursor terminal layout error.
 137 -  width function worktree buffer cache.
 138 +      branch frame update token.

• Edited packages/core/src/status.ts (+2 -2)
 234 +width render stream order checkout token hook transcript height.
 235 -    checkout error cache cache cache checkout refactor.
 236 -  module buffer config layout test request transcript frame stream.
 237 +  module render checkout cursor order terminal render session.
 238    stream cart transcript frame.

• Working (60s • esc to interrupt)
"
`;

exports[`sample streams > final screen of the fake opencode stream 1`] = `
{
  "alternate": false,
  "cursor": {
    "visible": true,
    "x": 0,
    "y": 0,
  },
}
`;

exports[`sample streams > final screen of the fake opencode stream 2`] = `
"






































"
`;

exports[`sample streams > final screen of the fake unicode stream 1`] = `
{
  "alternate": false,
  "cursor": {
    "visible": true,
    "x": 0,
    "y": 39,
  },
}
`;

exports[`sample streams > final screen of the fake unicode stream 2`] = `
"中文输入法 日本語のテキスト 한국어 텍스트
flags 🇺🇸 🇯🇵 🇩🇪 combining: é ä ñ Å
mixed: ｆｕｌｌｗｉｄｔｈ ＡＢＣ and half ｱｲｳ
box ┌─┬─┐ │中│文│ └─┴─┘ arrows ← → ↑ ↓ ⏺ ⎿ ⏵
mixed: ｆｕｌｌｗｉｄｔｈ ＡＢＣ and half ｱｲｳ
mixed: ｆｕｌｌｗｉｄｔｈ ＡＢＣ and half ｱｲｳ
emoji 😀 🚀 ✅ ❤️ 👍🏽 and ZWJ 👨‍👩‍👧 👩‍💻 🏳️‍🌈
box ┌─┬─┐ │中│文│ └─┴─┘ arrows ← → ↑ ↓ ⏺ ⎿ ⏵
box ┌─┬─┐ │中│文│ └─┴─┘ arrows ← → ↑ ↓ ⏺ ⎿ ⏵
flags 🇺🇸 🇯🇵 🇩🇪 combining: é ä ñ Å
中文输入法 日本語のテキスト 한국어 텍스트
emoji 😀 🚀 ✅ ❤️ 👍🏽 and ZWJ 👨‍👩‍👧 👩‍💻 🏳️‍🌈
box ┌─┬─┐ │中│文│ └─┴─┘ arrows ← → ↑ ↓ ⏺ ⎿ ⏵
box ┌─┬─┐ │中│文│ └─┴─┘ arrows ← → ↑ ↓ ⏺ ⎿ ⏵
box ┌─┬─┐ │中│文│ └─┴─┘ arrows ← → ↑ ↓ ⏺ ⎿ ⏵
中文输入法 日本語のテキスト 한국어 텍스트
mixed: ｆｕｌｌｗｉｄｔｈ ＡＢＣ and half ｱｲｳ
中文输入法 日本語のテキスト 한국어 텍스트
mixed: ｆｕｌｌｗｉｄｔｈ ＡＢＣ and half ｱｲｳ
mixed: ｆｕｌｌｗｉｄｔｈ ＡＢＣ and half ｱｲｳ
中文输入法 日本語のテキスト 한국어 텍스트
emoji 😀 🚀 ✅ ❤️ 👍🏽 and ZWJ 👨‍👩‍👧 👩‍💻 🏳️‍🌈
中文输入法 日本語のテキスト 한국어 텍스트
中文输入法 日本語のテキスト 한국어 텍스트
中文输入法 日本語のテキスト 한국어 텍스트
emoji 😀 🚀 ✅ ❤️ 👍🏽 and ZWJ 👨‍👩‍👧 👩‍💻 🏳️‍🌈
mixed: ｆｕｌｌｗｉｄｔｈ ＡＢＣ and half ｱｲｳ
box ┌─┬─┐ │中│文│ └─┴─┘ arrows ← → ↑ ↓ ⏺ ⎿ ⏵
box ┌─┬─┐ │中│文│ └─┴─┘ arrows ← → ↑ ↓ ⏺ ⎿ ⏵
中文输入法 日本語のテキスト 한국어 텍스트
box ┌─┬─┐ │中│文│ └─┴─┘ arrows ← → ↑ ↓ ⏺ ⎿ ⏵
emoji 😀 🚀 ✅ ❤️ 👍🏽 and ZWJ 👨‍👩‍👧 👩‍💻 🏳️‍🌈
emoji 😀 🚀 ✅ ❤️ 👍🏽 and ZWJ 👨‍👩‍👧 👩‍💻 🏳️‍🌈
中文输入法 日本語のテキスト 한국어 텍스트
box ┌─┬─┐ │中│文│ └─┴─┘ arrows ← → ↑ ↓ ⏺ ⎿ ⏵
flags 🇺🇸 🇯🇵 🇩🇪 combining: é ä ñ Å
box ┌─┬─┐ │中│文│ └─┴─┘ arrows ← → ↑ ↓ ⏺ ⎿ ⏵
box ┌─┬─┐ │中│文│ └─┴─┘ arrows ← → ↑ ↓ ⏺ ⎿ ⏵
mixed: ｆｕｌｌｗｉｄｔｈ ＡＢＣ and half ｱｲｳ
"
`;
